# rocq-domain-theory

./: .gitignore  AI_USE.md  README.md  _CoqProject  dune  dune-project  full-context.md  rocq-domain-theory.opam  setup.sh  tmixins.v
_build/: .db  .digest-db  log
_build/default/: META.rocq-domain-theory  rocq-domain-theory.dune-package  rocq-domain-theory.install
_build/default/src/phase0_foundations/.merlin-conf/: lib-rocq-domain-theory.phase0_foundations
_build/default/src/phase0_foundations/.phase0_foundations.objs/byte/: phase0_foundations.cmt
_build/default/src/phase0_hierarchybuilder/.merlin-conf/: lib-rocq-domain-theory.phase0_hierarchybuilder
_build/default/src/phase0_hierarchybuilder/.phase0_hierarchybuilder.objs/byte/: phase0_hierarchybuilder.cmt
_build/default/src/phase0_inverse_limit/.merlin-conf/: lib-rocq-domain-theory.phase0_inverse_limit
_build/default/src/phase0_inverse_limit/.phase0_inverse_limit.objs/byte/: phase0_inverse_limit.cmt
_build/default/src/phase1_enriched/.merlin-conf/: lib-rocq-domain-theory.phase1_enriched
_build/default/src/phase1_enriched/.phase1_enriched.objs/byte/: phase1_enriched.cmt
_build/default/src/phase1_validation/.merlin-conf/: lib-rocq-domain-theory.phase1_validation
_build/default/src/phase1_validation/.phase1_validation.objs/byte/: phase1_validation.cmt
_build/default/src/phase2_quantum/.merlin-conf/: lib-rocq-domain-theory.phase2_quantum
_build/default/src/phase2_quantum/.phase2_quantum.objs/byte/: phase2_quantum.cmt
_build/default/src/phase3_prototype/.merlin-conf/: lib-rocq-domain-theory.phase3_prototype
_build/default/src/phase3_prototype/.phase3_prototype.objs/byte/: phase3_prototype.cmt
_build/install/default/lib/rocq-domain-theory/: META  dune-package  opam
_build/install/default/lib/rocq-domain-theory/phase0_foundations/: phase0_foundations.cmt  phase0_foundations.ml
_build/install/default/lib/rocq-domain-theory/phase0_hierarchybuilder/: phase0_hierarchybuilder.cmt  phase0_hierarchybuilder.ml
_build/install/default/lib/rocq-domain-theory/phase0_inverse_limit/: phase0_inverse_limit.cmt  phase0_inverse_limit.ml
_build/install/default/lib/rocq-domain-theory/phase1_enriched/: phase1_enriched.cmt  phase1_enriched.ml
_build/install/default/lib/rocq-domain-theory/phase1_validation/: phase1_validation.cmt  phase1_validation.ml
_build/install/default/lib/rocq-domain-theory/phase2_quantum/: phase2_quantum.cmt  phase2_quantum.ml
_build/install/default/lib/rocq-domain-theory/phase3_prototype/: phase3_prototype.cmt  phase3_prototype.ml
analysis/: progress_log.md
docs/: abstract.md  design-decisions.md  migration-notes.md  project-structure.md
docs/thesis/: .gitignore  .latexmkrc  background.md  frontmatter.tex  introduction.md  main.tex  references.bib
docs/thesis/appendices/: bkv-migration.tex  code-listing.tex  design-decisions.tex
docs/thesis/chapters/: background.tex  conclusion.tex  discussion.tex  introduction.tex  methods.tex  results.tex
examples/: basic_cpos.v  dune  enriched_usage.v  examples.v  pcf_examples.v  recursive_domain.v  simple_quantum.qmc
planning/: mapping.md  milestones.md  phase0_foundations_plan.md  todo.md
scripts/: build.sh
src/: dune
src/instances/: Discrete.v  FunLift.v  Function.v  Lift.v  Nat.v  Product.v  Quantum.v  Sum.v  Yoneda.v  dune
src/lang/: PCF_Adequacy.v  PCF_Denotational.v  PCF_Operational.v  PCF_Soundness.v  PCF_Syntax.v  QMiniCore_Semantics.v  QMiniCore_Syntax.v  dune
src/phase0_foundations/: CPO.v  Continuous.v  Discrete.v  FixedPoints.v  FunctionSpaces.v  Lift.v  Order.v  Pointed.v  Products.v  Sums.v  TESTCPO.v  dune  nOrder.v  tmixins.v
src/phase0_hierarchybuilder/: Hierarchies.v  Instances.v  dune
src/phase0_inverse_limit/: BiFunctor.v  EmbeddingProjection.v  InverseLimit.v  RecursiveDomains.v  dune
src/phase1_enriched/: CPOEnriched.v  EnrichedCategory.v  EnrichedInverseLimit.v  EnrichedNatTrans.v  LocallyContinuous.v  RecursiveEquations.v  dune
src/phase1_validation/: PCF_Adequacy.v  PCF_Denotational.v  PCF_Operational.v  PCF_Soundness.v  PCF_Syntax.v  dune
src/phase2_quantum/: QuantumEnrichment.v  QuantumMorphisms.v  QuantumStructure.v  dune  qCPO.v  qCPOProperties.v
src/phase3_prototype/: QMiniCore_Semantics.v  QMiniCore_Syntax.v  dune
src/quantum/: QuantumEnrichment.v  QuantumMorphisms.v  QuantumStructure.v  dune  qCPO.v  qCPOProperties.v
src/structures/: CPO.v  Enriched.v  Morphisms.v  Order.v  Pointed.v  dune
src/theory/: CPOTheory.v  ChainTheory.v  DomainEquations.v  EnrichedTheory.v  FixedPoints.v  FunctionSpaces.v  Lift.v  LiftMonad.v  NatTrans.v  OrderTheory.v  Products.v  ScottTopology.v  Sums.v  dune
test/: EnrichedTests.v  FixedPointTests.v  FunctionSpaceTests.v  LiftTests.v  PCFTests.v  ProductTests.v  SumTests.v  dune  foundations_cpo.v  foundations_fixedpoint.v  foundations_function_spaces.v  foundations_products.v  original_dune.txt  test_quantum.v  test_suite.v
