(coq.theory
 (name DomainTheory.Lang)
 (synopsis "Phase 1/2/3: PCF and QMiniCore language definitions and semantics")
 (theories DomainTheory.Structures DomainTheory.Theory DomainTheory.Instances
           DomainTheory.Quantum)
 (modules PCF_Syntax PCF_Operational PCF_Denotational PCF_Soundness PCF_Adequacy
          QMiniCore_Syntax QMiniCore_Semantics))
