(coq.theory
 (name phase2_quantum)
 (package rocq-domain-theory)
 (stdlib yes)
 (synopsis "Quantum CPO structures (stretch goal)")
 (modules qCPO qCPOProperties QuantumEnrichment QuantumMorphisms QuantumStructure)
 (flags -Q %{env:OPAM_SWITCH_PREFIX=/home/mysti/.opam/default}/lib/coq/user-contrib/Stdlib Stdlib -Q %{env:OPAM_SWITCH_PREFIX=/home/mysti/.opam/default}/lib/coq/user-contrib/HB HB -Q %{env:OPAM_SWITCH_PREFIX=/home/mysti/.opam/default}/lib/coq/user-contrib/elpi elpi -Q %{env:OPAM_SWITCH_PREFIX=/home/mysti/.opam/default}/lib/coq/user-contrib/elpi_elpi elpi_elpi)
)
